test: further coverage
